2010-04-07  John W. Eaton  <jwe@octave.org>

	* testfun/runtests.m: New function.
	* testfun/module.mk (testfun_FCN_FILES): Add it to the list.

2010-02-19  Rik <octave@nomad.inbox5.com>

	* statistics/cut.m: Modify cut to use the same decision criteria as histc
   when deciding whether a data point is inside or outside interval

2010-04-02  Marc Vinyals  <mrc_timer@users.sourceforge.net>

	* signal/arma_rnd.m: fix typo in test.

2010-04-02  Marc Vinyals  <mrc_timer@users.sourceforge.net>

	* signal/arma_rnd.m: fix typo in test.

2010-03-30  Jaroslav Hajek  <highegg@gmail.com>

	* specfun/factor.m: Use rem to check divisibility.

2010-03-27  Ben Abbott <bpabbot@mac.com>

	* plot/__go_draw_figure__.m: Untabify.
	* plot/print.m: Provide default suffixes & validate hardcopy format.

2010-03-27  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fzero.m: Handle the breakdown if initial bracketing
	contains an exact root. Improve docstring.

2010-03-26  Jaroslav Hajek  <highegg@gmail.com>

	* miscellaneous/module.mk: Add unimplemented.m here.

2010-03-25  Ben Abbott <bpabbot@mac.com>

	* /general/cell2mat.m: Add test for cells of cells.

2010-03-24  Petr Mikulik <mikulik@physics.muni.cz>

	* plot/__go_draw_axes__.m: Unset logscale also for unused gnuplot
	axis locations.

2010-03-24  Jaroslav Hajek  <highegg@gmail.com>

	* help/help.m: Maybe warn about unimplemented Matlab functions.

2010-03-24  Jaroslav Hajek  <highegg@gmail.com>

	* miscellaneous/unimplemented.m: New function.

2010-03-24  Jaroslav Hajek  <highegg@gmail.com>

	* general/cell2mat.m: Support cells of cells.

2010-03-23  John W. Eaton  <jwe@octave.org>

	* plot/refreshdata.m: Don't use cell2mat on cell array of cell arrays.

2010-03-22  Soren Hauberg  <hauberg@gmail.com>

	* image/gmap40.m, image/hot.m, image/hsv2rgb.m, image/image.m,
	image/image_viewer.m, image/imfinfo.m, image/imread.m, image/imshow.m,
	image/saveimage: Detabify.

2010-03-21  Soren Hauberg  <hauberg@gmail.com>
